# Bethe_Block_C

./: .gitignore  Bethe_Block.cpp  Bethe_Block.h  CMakeLists.txt  Data.jpj  DataSet.cpp  DataSet.h  README.md  a.out  constants.h  main.cpp  material.h  script.sh  token.txt  typescript
HEADERS/: Bethe_Block.h  DataSet.h  constants.h  material.h
Libraries/: Bethe_Block.cpp  DataSet.cpp
New/: bb.py  data.py  main.py
